# AIResumeScanner

./: .dockerignore  .env  .gitignore  .replit  Dockerfile  README.md  app.py  database.py  docker-compose.yml  nlp_processor.py  package-lock.json  pyproject.toml  pyrightconfig.json  ranking_system.py  requirements.txt  resume_parser.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted--8-files-AI-Powered-Resume-Scanner-Welcome-to-the-Resume-Scanner-This-intelligent-a-1745320269483.txt  Pasted-Great-choice-An-AI-Powered-Resume-Scanner-is-a-high-impact-real-world-project-that-s-especiall-1745309819489.txt
data/: .encryption_key
docs/: AIResumeScanner-Documentation.html  CHANGELOG.md  CONFIGURATION.md  DATA_FORMATS.md  MODULES.md  SECURITY_PRIVACY.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
