[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-resume-scanner"
version = "0.1.0"
authors = [
  { name = "Developer", email = "dev@example.com" },
]
description = "AI-Powered Resume Scanner"
requires-python = ">=3.8"
dependencies = [
  "streamlit",
  "PyPDF2",
  "python-docx",
  "scikit-learn",
  "spacy",
  "matplotlib",
  "pandas",
  "plotly",
  "numpy",
  "sqlalchemy",
  "psycopg2-binary",
]

[tool.uv.sources]
coola = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
irisml = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
compressai = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
irisml-tasks-azure-openai = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
compressed-tensors = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
irisml-tasks-torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
compressed-tensors-nightly = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
irisml-tasks-training = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
concrete-python = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
confit = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
item-matching = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
conformer = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
jaqpotpy = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
contextualSpellCheck = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
continual-inference = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
jina = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
controlnet-aux = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
convokit = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
judo = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
